--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 /tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
+/tmp/cache/*
+!/tmp/cache/.keep
+!/tmp/cache/
 
 # Ignore uploaded files in development.
 /storage/*
