Update environment configuration for local development and Docker setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:15.2-alpine
     environment:
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${DATABASE_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-password}
     ports:
       - '5432:5432'
     volumes:
@@ -11,9 +13,9 @@ services:
 
   redis:
     image: redis:7.2-alpine
-    ports:
-      - "6379:6379"
     command: redis-server --appendonly yes
+    ports:
+      - '6379:6379'
     volumes:
       - redis_data:/data
 
@@ -23,10 +25,21 @@ services:
     volumes:
       - .:/app
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - db
       - redis
+    env_file:
+      - .env
+
+  sidekiq:
+    build: .
+    command: bundle exec sidekiq
+    depends_on:
+      - db
+      - redis
+    volumes:
+      - .:/app
     env_file:
       - .env
 
