--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# DATABASE_HOST=db
-# DATABASE_USERNAME=postgres
-# DATABASE_PASSWORD=password
+DATABASE_HOST=localhost
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=password
+REDIS_URL=redis://localhost:6379/0
