--- a/.sample.env
+++ b/.sample.env
@@ -1,3 +1,6 @@
-DATABASE_HOST=db
+DATABASE_HOST=localhost
+# DATABASE_HOST=db # from docker
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=password
+REDIS_URL=redis://localhost:6379/0
+# REDIS_URL=redis://redis:6379/0 # from docker
